css/main.css
:root {
  --dark-grey: #333333e6;
  --light-grey: #dadada;
  --yellow: hsl(59, 73%, 50%);
  --fill: rgb(11, 106, 90);
  --bg: rgb(247, 247, 247);
  --vw: 1vw;
}
::-webkit-scrollbar {
  display: none;
}
* {
  padding: 0;
  margin: 0;
  font-family: "M PLUS Rounded 1c", sans-serif;
  color: var(--dark-grey);
  position: relative;
  box-sizing: border-box;
}
body {
  overflow-x: hidden;
  background-color: var(--bg);
}
nav.main {
  border-bottom: 1px dotted var(--light-grey);
  position: fixed;
  display: none;
  height: 56px;
  width: calc(100 * var(--vw));
  padding: 0 calc(6 * var(--vw));
  background-color: white;
  z-index: 19;
  grid-template-columns: auto auto auto auto auto auto auto auto 40px 40px 40px 50px;
  justify-items: left;
  align-items: baseline;
}
nav.main * {
  font-size: 19px;
  line-height: 47px; /* 3px difference to the line height of grid row, so that the yellow underline cut through the border*/
  cursor: pointer;
}
nav.main span {
  border-bottom: 7px solid var(--yellow);
  top: 5px;
  margin-right: 7px;
}

nav.main span.uncheck {
  color: var(--light-grey);
  border-bottom: none;
}
nav.main span.uncheck:hover {
  color: var(--dark-grey);
}
nav.main a.git {
  grid-column-start: 9;
}
nav.main a {
  text-decoration: none;
  top: 7px;
}
nav.main a img {
  height: 25px;
  top: 5px;
  opacity: 0.8;
}
nav.main a.email {
  font-size: 1em;
}
.burger {
  display: none;
  position: fixed;
  padding-top: 12px;
  padding-left: calc(3 * var(--vw));
  font-size: 25px;
  z-index: 110;
  cursor: pointer;
}
.burger p {
  padding: 0;
}

footer {
  font-size: 13px;
  font-weight: 500;
  padding: 1em;
  text-align: center;
  color: var(--dark-grey);
  background: white;
}
.bg-color {
  height: 100vh;
  width: calc(100 * var(--vw));
  position: fixed;
  top: 0;
  left: 0;
  background-color: var(--bg);
}
svg {
  width: calc(100 * var(--vw));
  position: relative;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
  stroke: var(--dark-grey);
  fill: none;
}
svg#dotted-lines {
  width: calc(110.3 * var(--vw));
  position: absolute;
  top: calc(-0.2 * var(--vw));
  left: calc(-10 * var(--vw));
}
svg#title {
  stroke-width: 4;
  z-index: 11;
}
g#i g {
  stroke-width: 0;
}
svg#title text {
  font-size: 29px;
  font-weight: 300;
  fill: var(--dark-grey);
}
svg#title {
  position: fixed;
}
#i {
  transform-origin: 50%;
  stroke-width: 4;
}
.triangleParts {
  stroke-width: 4;
}
svg#changingShape {
  width: calc(190 * var(--vw));
  top: calc(-16 * var(--vw));
  left: calc(-8 * var(--vw));
  z-index: 13;
}
text {
  stroke-width: 2;
}
.rolling {
  stroke-width: 2.5;
}
/* polygon:not(.shadow):not(.triangle) {
  cursor: pointer;
} */
.shadow {
  stroke: none;
  fill: var(--fill);
  opacity: 0.1;
  /* fill: rgba(255, 255, 255, 0.7); */
  pointer-events: none;
}
path {
  stroke-width: 2;
  stroke: #333333;
  fill: #333333;
}
#changingShape line {
  stroke-width: 1;
  stroke-dasharray: 2 3;
  stroke-dashoffset: 2;
  pointer-events: none;
  opacity: 0.8;
}
.group {
  pointer-events: none;
  font-size: 23px;
  display: none;
  font-weight: 100;
}
foreignObject.other span.project {
  cursor: pointer;
}
foreignObject nav {
  width: 119px; /* not dynamic here, need to change */
  text-align: right;
  font-size: 9px;
  height: 0;
  overflow: hidden;
}
foreignObject p {
  line-height: 24px;
  font-weight: 500;
  pointer-events: none;
  opacity: 0.8;
}
.side-tech {
  font-size: 12px;
}
.side-tech ul {
  list-style: square;
}
.side-tech * {
  font-weight: 300;
  opacity: 0.8;
}
.chart {
  padding: 0 calc(8 * var(--vw));
  width: 97.5%;
}
#about {
  width: 100%;
  background: white;
  padding: calc(6 * var(--vw)) calc(8 * var(--vw)) calc(7 * var(--vw))
    calc(14 * var(--vw));
  display: grid;
  grid-template-columns: calc(33 * var(--vw)) calc(36 * var(--vw));
  grid-template-rows: auto auto;
  grid-column-gap: calc(6 * var(--vw));
  grid-row-gap: 10px;
}
#about.hide {
  display: none;
}
#about > div:nth-of-type(1) {
  display: grid;
  grid-template-columns: 100px auto;
  grid-column-gap: 50px;
}
#about .intro {
  grid-column-start: 1;
  grid-row-start: 2;
}
#about .self-others {
  grid-column-start: 2;
  grid-row-start: 1;
  grid-row: span 2;
}
img.portrait {
  width: 100%;
  height: auto;
}
.status {
  padding: calc(6 * var(--vw)) 0 calc(6 * var(--vw)) calc(6 * var(--vw));
  width: 100%;
}
.status p,
#about p,
footer,
.self-others li {
  font-family: "Barlow", sans-serif;
  line-height: 26px;
}
.hide {
  display: none;
}
.status div > img {
  width: 92%;
  left: 0;
  /* transform: rotate(45deg); */
}
.status p > img {
  display: inline-block;
  height: 35px;
  margin-right: 10px;
}
.status img.use-less {
  height: 25px;
}
.project-group ul {
  list-style: none;
}
.project-group li {
  font-size: 16.63px;
}
span.project:not(.grey-out) {
  margin-right: 10px;
  cursor: pointer;
}
.other span.project {
  margin-left: 10px;
  margin-right: 0;
}
.grey-out {
  opacity: 0.3;
}
#single-project,
#single-project-square {
  z-index: 17;
  position: fixed;
  width: 0;
  height: 0;
  background-color: white;
  opacity: 0.97;
  clip-path: polygon(
    50% 0%,
    85% 15%,
    100% 50%,
    85% 85%,
    50% 100%,
    15% 85%,
    0% 50%,
    15% 15%
  );
  font-size: 16px;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 50px auto;
  grid-row-gap: 30px;
  grid-column-gap: 50px;
}
#single-project-square {
  padding: 10vh 10vw;
  height: 100vh;
  overflow-y: scroll;
  width: 100vw;
  clip-path: none;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 111;
  grid-template-columns: 80vw;
  grid-template-rows: 50px auto 40vh;
}
#single-project-square.no-show {
  height: 0;
  width: 0;
  padding: 0;
  overflow: hidden;
}
#single-project svg {
  position: absolute;
}
#single-project h3 {
  grid-column-start: 1;
  grid-row-start: 1;
  margin-bottom: 10px;
}
#single-project p.close {
  text-align: center;
  cursor: pointer;
  font-size: 1.5em;
  grid-column-start: 1;
  grid-row-start: 1;
  grid-column: span 2;
}
#single-project-square p.close {
  font-size: 30px;
  cursor: pointer;
}

#single-project .desc {
  text-align: right;
  grid-column-start: 1;
  grid-row-start: 2;
}
#single-project-square .desc > * {
  margin-bottom: 20px;
}
#single-project .desc h3 {
  width: 70%;
  left: 30%;
}
#single-project .notes ul {
  list-style: none;
}
#single-project .notes li,
h4 {
  margin-bottom: 5px;
}
#single-project .img {
  position: absolute;
  top: calc(6% + 80px);
  right: 0;
  width: 50%;
  height: 100%;
}
#single-project-square .img {
  width: 100%;
}
#single-project .img img {
  height: 70%;
  width: auto;
}
#single-project-square .img img {
  width: 100%;
}
#single-project .cover {
  /* exported gif always have a colored border line, need to cover it up*/
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 32.5%;
  background-color: white;
}
#single-project .notes {
  margin-bottom: 1em;
}
.type p,
.notes li {
  font-size: 0.9em;
  margin-bottom: 0.5em;
  font-family: "Barlow", sans-serif;
  width: 90%;
  left: 10%;
}
.tech ul {
  list-style: none;
}
.tech ul li {
  display: inline;
}
.url {
  margin-bottom: 1em;
}
.report {
  font-size: 13px;
  line-height: 19px;
  font-family: "Barlow", sans-serif;
  font-weight: 300;
}
#single-project svg {
  position: absolute;
  stroke-width: 0.35;
  stroke: var(--light-grey);
  width: 92%;
  left: 4%;
  top: 4%;
}
#single-project-shadow {
  position: fixed;
  clip-path: polygon(
    50% 0%,
    85% 15%,
    100% 50%,
    85% 85%,
    50% 100%,
    15% 85%,
    0% 50%,
    15% 15%
  );
  /* clip-path: polygon(50% 0%, 50% 100%, 15% 85%, 0% 50%, 15% 15%);   */
  background-color: var(--dark-grey);
  opacity: 0.1;
}
.opacity {
  opacity: 0.8;
  font-size: 8px;
}
.contact {
  padding: calc(2 * var(--vw));
}
.bold {
  font-weight: 700;
}
.status h4 {
  margin-bottom: 1em;
}
.status h4 + p {
  margin-bottom: 20px;
}
#future,
#current {
  border-right: calc(0.64 * var(--vw)) dotted white;
  display: grid;
  grid-template-columns: calc(33 * var(--vw)) calc(30 * var(--vw));
  grid-column-gap: calc(6 * var(--vw));
}
#current {
  border-left: calc(0.64 * var(--vw)) dotted white;
  border-bottom: calc(0.64 * var(--vw)) dotted white;
  border-right: none;
  padding-left: calc(
    calc(6 * var(--vw)) - 9px
  ); /* minus the border, so that text here and text in the section below are aligned */
}
h1 {
  grid-column: span 2;
  margin-bottom: 0.5em;
  font-family: "Montserrat Subrayada", sans-serif;
  color: white;
  font-size: calc(5 * var(--vw));
  /* text-shadow: 3px -2px rgba(233, 233, 233, 0.3); */
}
#about h1 {
  color: var(--bg);
}
.mobile {
  padding-left: calc(
    8.64 * var(--vw)
  ); /* 8vw as sections below and .64 because of border */
  width: 80%;
}
.mobile p {
  color: var(--fill);
  font-weight: 300;
}
.self-others ul {
  list-style: square;
}
.bold {
  font-weight: bold;
}
.intro {
  padding-right: calc(2 * var(--vw));
}
blockquote {
  padding-left: 5px;
  padding-bottom: 10px;
  background-color: var(--bg);
  margin-top: 1em;
  border-left: 5px solid var(--light-grey);
  quotes: "\201c" "\201d" "\2018" "\2019";
}
blockquote::before {
  color: var(--light-grey);
  content: url(/img/quotes.png);
  font-size: 4em;
  line-height: 0.1em;
  vertical-align: -0.5em;
}
blockquote p {
  left: 50px;
  top: -1em;
  width: 85%;
  margin-bottom: 1em;
  font-style: italic;
}
span img {
  opacity: 0.9; /* temp solution */
  width: 7px;
  transform-origin: center center;
  pointer-events: none; /* only the parent span triggers modal, need to be sure for js event */
  transition: all 0.2s ease-in;
}
span img.animate {
  transition: all 0.15s ease-out;
  width: 12px;
}
span img.random {
  transition: all 0.35s ease-out;
  width: 12px;
}
#cv {
  z-index: 200;
}
@media screen and (max-width: 1024px) {
  .status {
    padding: calc(6 * var(--vw)) 0 calc(6 * var(--vw)) calc(5 * var(--vw));
  }
  #future,
  #current {
    grid-template-columns: calc(37 * var(--vw)) calc(31 * var(--vw));
  }
  #about {
    padding: calc(6 * var(--vw)) calc(8 * var(--vw)) calc(7 * var(--vw))
      calc(13 * var(--vw));
    grid-template-columns: calc(79 * var(--vw));
  }
  #about > * {
    grid-column-start: 1;
  }
  #about > * > * {
    width: 90%;
  }
  #about > div > div p {
    width: 80%;
  }
  #about .self-others {
    grid-column-start: 1;
    grid-row-start: 3;
  }
  blockquote p {
    left: 40px;
    width: 80%;
  }
}

@media screen and (max-width: 768px) {
  /* svg#changingShape {
    display: none;
  } */
  .burger {
    display: inherit;
  }
  nav.main {
    grid-template-rows: repeat(7, 60px);
    grid-template-columns: 1fr;
    overflow: scroll;
    padding-left: 12vw;
    padding-bottom: 70px;
  }
  nav.main.show {
    height: auto;
  }
  nav.main > * {
    grid-column-start: 1;
  }
  nav.main a.git {
    grid-column-start: 1;
    grid-row-start: 5;
  }
  .chart {
    padding-left: 0;
  }
  #future,
  #current {
    padding: 70px calc(8 * var(--vw));
    grid-template-columns: calc(78 * var(--vw));
  }
  #future > *,
  #current > * {
    grid-column-start: 1;
  }
  #current h3 {
    margin-top: 50px;
  }
  #about {
    padding: calc(6 * var(--vw)) calc(8 * var(--vw)) calc(7 * var(--vw))
      calc(8 * var(--vw));
    grid-template-columns: calc(84 * var(--vw));
  }
  #about > * > * {
    width: 90%;
  }
  h1 {
    font-size: calc(10 * var(--vw));
  }
  nav.main span.uncheck {
    color: var(--dark-grey);
  }
  nav.main span:not(.uncheck) {
    grid-row-start: 1;
  }
  #current {
    height: auto;
  }
  .status > img {
    width: 100%;
    position: inherit;
    top: 0;
    left: 0;
  }
}
@media screen and (min-width: 1900px) {
  :root {
    --vw: 19px;
  }
  body {
    width: 1900px;
    margin-left: calc(50vw - 950px);
  }
}

